[Mac] Fix for omnibox lock icon - Align the permission bubble to be below the Lock Icon - Fix blurry lock icon

BUG=662411, 662365

Review-Url: https://codereview.chromium.org/2503713002
Cr-Commit-Position: refs/heads/master@{#433283}

Former-commit-id: f1b792a63088465603c079e7dc1037acb2b67427